--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "nainasjdr <nainasjdr@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "gitignore": "0.7.0"
   }
 }
